I changed the mouth

--- a/potatohead.html
+++ b/potatohead.html
@@ -16,7 +16,7 @@
 			<img id="arms_image">
 			<img id="ears_image">
 			<img id="eyes_image" >
-			<img id="mouth_image" >
+			<img src="assets/mouth.png" id="mouth_image" >
 			<img id="nose_image" >
 			<img id="eyebrows_image" >
 			<img id="glasses_image" >
