I changed the hat

--- a/potatohead.html
+++ b/potatohead.html
@@ -25,7 +25,7 @@
 			<img id="shoes_image" >
 			<img id="cane">
 			<img id="earrings">
-			<img id="hatflower">
+			<img src="assets/hat.png"id="hatflower">
 			<img id="boosters">
 		</div>
 
