--- a/potatohead.html
+++ b/potatohead.html
@@ -17,7 +17,7 @@
 			<img id="ears_image">
 			<img id="eyes_image" >
 			<img id="mouth_image" >
-			<img id="nose_image" >
+			<img src="assets/nose.png" id="nose_image" >
 			<img id="eyebrows_image" >
 			<img id="glasses_image" >
 			<img id="hat_image" >
